--- a/index.html
+++ b/index.html
@@ -28,12 +28,17 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Data science capstone project</h3>
+<a id="cap-project" class="anchor" href="#cap-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Data science capstone project </h3>
 
-<p>Can the success of a novel be predicted through analysis of writing style? In the below technical paper, I analyze the stylistic structure of romance and science-fiction novels. <a href="https://bishopkd.github.io/capstone/html/technical_report.html">Technical report</a>, select a </p>
+<p>Can the success of a novel be predicted through analysis of writing style? In the below technical paper, I analyze the stylistic structure of romance and science-fiction novels using natural language processing and machine-learning classification models. 
+<ul>
+<li>
+<a href="https://bishopkd.github.io/capstone/html/technical_report.html">Technical report</a>
+</li>
+</ul>
+</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+
 
 
       </section>
@@ -43,7 +48,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p><font size=2>Published with </font><a href="https://pages.github.com"><font size=2>GitHub Pages</font></a></p>
       </footer>
     </div>
 
